// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button Snapshot > should match snapshot for basic button with text 1`] = `
<button
  aria-busy="false"
  aria-disabled="false"
  class="inline-flex items-center justify-center font-medium rounded-md focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed disabled:pointer-events-none bg-action-primary text-text-inverse hover:opacity-90 focus:ring-action-primary active:opacity-80 h-10 px-4 text-base gap-2 animate-normal transition-colors duration-150"
  data-headlessui-state=""
  data-testid="button-basic"
  type="button"
>
  <span
    class="flex items-center"
  >
    Click me
  </span>
</button>
`;

exports[`Button Snapshot > should match snapshot for different sizes > button-large 1`] = `
<button
  aria-busy="false"
  aria-disabled="false"
  class="inline-flex items-center justify-center font-medium rounded-md focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed disabled:pointer-events-none bg-action-primary text-text-inverse hover:opacity-90 focus:ring-action-primary active:opacity-80 h-12 px-6 text-lg gap-2 animate-normal transition-colors duration-150"
  data-headlessui-state=""
  data-testid="button-large"
  type="button"
>
  <span
    class="flex items-center"
  >
    Large
  </span>
</button>
`;

exports[`Button Snapshot > should match snapshot for different sizes > button-medium 1`] = `
<button
  aria-busy="false"
  aria-disabled="false"
  class="inline-flex items-center justify-center font-medium rounded-md focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed disabled:pointer-events-none bg-action-primary text-text-inverse hover:opacity-90 focus:ring-action-primary active:opacity-80 h-10 px-4 text-base gap-2 animate-normal transition-colors duration-150"
  data-headlessui-state=""
  data-testid="button-medium"
  type="button"
>
  <span
    class="flex items-center"
  >
    Medium
  </span>
</button>
`;

exports[`Button Snapshot > should match snapshot for different sizes > button-small 1`] = `
<button
  aria-busy="false"
  aria-disabled="false"
  class="inline-flex items-center justify-center font-medium rounded-md focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed disabled:pointer-events-none bg-action-primary text-text-inverse hover:opacity-90 focus:ring-action-primary active:opacity-80 h-8 px-3 text-sm gap-2 animate-normal transition-colors duration-150"
  data-headlessui-state=""
  data-testid="button-small"
  type="button"
>
  <span
    class="flex items-center"
  >
    Small
  </span>
</button>
`;

exports[`Button Snapshot > should match snapshot for disabled button 1`] = `
<button
  aria-busy="false"
  aria-disabled="true"
  class="inline-flex items-center justify-center font-medium rounded-md focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed disabled:pointer-events-none bg-action-primary text-text-inverse hover:opacity-90 focus:ring-action-primary active:opacity-80 h-10 px-4 text-base gap-2 animate-normal transition-colors duration-150 opacity-50 cursor-not-allowed pointer-events-none"
  data-disabled=""
  data-headlessui-state="disabled"
  data-testid="button-disabled"
  disabled=""
  type="button"
>
  <span
    class="flex items-center"
  >
    Disabled Button
  </span>
</button>
`;

exports[`Button Snapshot > should match snapshot for loading button 1`] = `
<button
  aria-busy="true"
  aria-disabled="true"
  class="inline-flex items-center justify-center font-medium rounded-md focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed disabled:pointer-events-none bg-action-primary text-text-inverse hover:opacity-90 focus:ring-action-primary active:opacity-80 h-10 px-4 text-base gap-2 animate-normal transition-colors duration-150 opacity-50 cursor-not-allowed pointer-events-none"
  data-disabled=""
  data-headlessui-state="disabled"
  data-testid="button-loading"
  disabled=""
  type="button"
>
  <svg
    aria-hidden="false"
    aria-label="Loading"
    class="lucide lucide-loader-circle flex-shrink-0 animate-spin w-4 h-4"
    fill="none"
    height="24"
    role="status"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 12a9 9 0 1 1-6.219-8.56"
    />
  </svg>
</button>
`;

exports[`Button Snapshot > should match snapshot for primary variant 1`] = `
<button
  aria-busy="false"
  aria-disabled="false"
  class="inline-flex items-center justify-center font-medium rounded-md focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed disabled:pointer-events-none bg-action-primary text-text-inverse hover:opacity-90 focus:ring-action-primary active:opacity-80 h-10 px-4 text-base gap-2 animate-normal transition-colors duration-150"
  data-headlessui-state=""
  data-testid="button-primary"
  type="button"
>
  <span
    class="flex items-center"
  >
    Primary Button
  </span>
</button>
`;

exports[`Button Snapshot > should match snapshot for secondary variant 1`] = `
<button
  aria-busy="false"
  aria-disabled="false"
  class="inline-flex items-center justify-center font-medium rounded-md focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed disabled:pointer-events-none bg-surface-secondary text-text-primary hover:bg-surface-tertiary focus:ring-action-primary active:bg-surface-tertiary h-10 px-4 text-base gap-2 animate-normal transition-colors duration-150"
  data-headlessui-state=""
  data-testid="button-secondary"
  type="button"
>
  <span
    class="flex items-center"
  >
    Secondary Button
  </span>
</button>
`;
